--- a/youtube.html
+++ b/youtube.html
@@ -39,6 +39,7 @@
 
     <div class="thumbnail-row">
       <img class=thumnails src="thumbnails/thumbnail-1.webp">
+      <div class="video-time">14:20</div>
     </div>
       
     <div class="video-info-grid">
