--- a/youtube.html
+++ b/youtube.html
@@ -30,7 +30,11 @@
       </button>
     </div>
     <div class="right-section">
-      <img class="upload-icon" src="Icons/upload.svg">
+      <div class="upload-icon-container">
+        <img class="upload-icon" src="Icons/upload.svg">
+        <div class="tooltip">Create</div>
+    </div>
+      
       <img class="youtube-apps-icon" src="Icons/youtube-apps.svg">
      
       <div class-icon-container> <img class="notification-icon" src="Icons/you-notifications.svg">
@@ -100,7 +104,7 @@
       <div class="video-info-grid">
         <div class="channel-picture">
 
-          <img class="profile-picture" src="thumbnails/chanels-picture/channel-2.jpeg">
+          <img class="profile-picture" src="thumbnails/chanels-picture/channel-3.jpeg">
 
         </div>
         <div class="video-info">
