--- a/youtube.html
+++ b/youtube.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="header">
-    <div class="left-section"><img class="hamburger-menu" src="icons/hamburger-menu.svg">
+    <div class="left-section"><img class="hamburger-menu" src="https://supersimple.dev/public/img/exercises/youtube/icons/hamburger-menu.svg">
       <img class="youtube-logo" src="Icons/youtube-logo.svg">
     </div>
     <div class="middle-section">
@@ -47,21 +47,21 @@
 
   <div class="sidebar">
     <div class="sidebar-link">
-      <img src="Icons/home.svg"><div>Home</div>
+      <img src="https://supersimple.dev/public/img/exercises/youtube/icons/home.svg"><div>Home</div>
     </div>
     <div class="sidebar-link">
-      <img src="Icons/explore.svg"><div>Explore</div>
+      <img src="https://supersimple.dev/public/img/exercises/youtube/icons/explore.svg"><div>Explore</div>
     </div>
-    <div class="sidebar-link"><img src="icons/subscriptions.svg">
+    <div class="sidebar-link"><img src="https://supersimple.dev/public/img/exercises/youtube/icons/subscriptions.svg">
     <div>Subscription</div>
     </div>
-    <div class="sidebar-link"><img src="icons/originals.svg">
+    <div class="sidebar-link"><img src="https://supersimple.dev/public/img/exercises/youtube/icons/originals.svg">
       <div>Originals</div>
     </div>
-    <div class="sidebar-link"><img src="icons/youtube-music.svg">
+    <div class="https://supersimple.dev/public/img/exercises/youtube/icons/youtube-music.svg"><img src="icons/">
       <div>Youtube Music</div>
     </div>
-    <div class="sidebar-link"><img src="icons/library.svg">
+    <div class="https://supersimple.dev/public/img/exercises/youtube/icons/library.svg"><img src="icons/library.svg">
       <div>Library</div>
     </div>
   </div>
