--- a/youtube.html
+++ b/youtube.html
@@ -58,10 +58,10 @@
     <div class="sidebar-link"><img src="https://supersimple.dev/public/img/exercises/youtube/icons/originals.svg">
       <div>Originals</div>
     </div>
-    <div class="https://supersimple.dev/public/img/exercises/youtube/icons/youtube-music.svg"><img src="icons/">
+    <div class="sidebar-link"><img src="https://supersimple.dev/public/img/exercises/youtube/icons/youtube-music.svg">
       <div>Youtube Music</div>
     </div>
-    <div class="https://supersimple.dev/public/img/exercises/youtube/icons/library.svg"><img src="icons/library.svg">
+    <div class="sidebar-link"><img src="https://supersimple.dev/public/img/exercises/youtube/icons/library.svg">
       <div>Library</div>
     </div>
   </div>
